View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023916 | Open CASCADE | OCCT:Tests | public | 2013-04-19 15:16 | 2013-12-19 13:55 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0023916: Test artifacts in current directory | ||||
Description | Automatic tests produce some artifacts (files) in the current directory instead of putting them to relevant log directory; this should be fixed/ | ||||
Steps To Reproduce | Draw[]> testgrid then look for the new files in the current directory. I found those files: 0 occ22583-image1.png occ22583-image2.png TestExportStructure.step SecondMirrorWire.brep | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR23916 was created. It contains following modifications: 1. occ22583-image1.png occ22583-image2.png Test case bugs/vis/bug23226 was modified. 2. TestExportStructure.step It's problem in QA command OCC7141 using in test case bugs/xde/bug7141. File "TestExportStructure.step" is currently removing after execution of command. 3. SecondMirrorWire.brep QA command OCC23774Test considers writing this file in current directory. It's not necessary and was deleted. 4. file 0 Test case bugs/iges/bug22820 was modified. |
|
Small corrections in QABugs_11.cxx and test cases were done. |
|
Remarks accounted; please proceed with testing / integration |
occt: master 5879dab4 2013-04-26 11:33:30 Details Diff |
0023916: Test artifacts in current directory Improvements to prevent producing artifacts (files) in current directory Modified QA command OCC7141 to save file in specific location |
Affected Issues 0023916 |
|
mod - src/QABugs/QABugs_11.cxx | Diff File | ||
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
mod - tests/bugs/iges/bug22820 | Diff File | ||
mod - tests/bugs/vis/bug23226 | Diff File | ||
mod - tests/bugs/xde/bug7141 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-04-19 15:16 |
|
New Issue | |
2013-04-19 15:16 |
|
Assigned To | => mkv |
2013-04-21 07:58 |
|
Assigned To | mkv => apn |
2013-04-21 07:58 |
|
Status | new => assigned |
2013-04-21 07:59 |
|
Steps to Reproduce Updated | |
2013-04-25 18:18 | apn | Note Added: 0024282 | |
2013-04-25 18:18 | apn | Test case number | => Not needed |
2013-04-25 18:18 | apn | Assigned To | apn => abv |
2013-04-25 18:18 | apn | Status | assigned => resolved |
2013-04-26 10:37 | apn | Note Added: 0024287 | |
2013-04-26 10:39 |
|
Note Added: 0024288 | |
2013-04-26 10:39 |
|
Assigned To | abv => bugmaster |
2013-04-26 10:39 |
|
Status | resolved => reviewed |
2013-04-26 10:46 | apn | Status | reviewed => tested |
2013-04-30 10:28 | apn | Changeset attached | => occt master 5879dab4 |
2013-04-30 10:28 | apn | Assigned To | bugmaster => apn |
2013-04-30 10:28 | apn | Status | tested => verified |
2013-04-30 10:28 | apn | Resolution | open => fixed |
2013-12-19 13:53 | bugmaster | Status | verified => closed |
2013-12-19 13:55 | bugmaster | Fixed in Version | => 6.7.0 |