0023916: Test artifacts in current directory

Improvements to prevent producing artifacts (files) in current directory
Modified QA command OCC7141 to save file in specific location